--- a/css/style.css
+++ b/css/style.css
@@ -1197,7 +1197,7 @@ a:focus {
 
 .portfolio .container {
     background-color: #222222;
-    padding: 2rem;
+    padding: 1rem;
     line-height: 1.6;
     max-width: 1000px;
     margin: 0 auto;
@@ -1206,8 +1206,8 @@ a:focus {
 .project-card {
     display: flex;
     flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.3);
-    margin-bottom: 2rem;
+    background-color: #272626;
+    margin-bottom: 0.5rem;
     padding: 1.5rem;
     border-radius: 4px;
     transition: transform 0.2s ease;
@@ -1215,6 +1215,7 @@ a:focus {
 
 .project-name {
     font-size: 2rem;
+    color: #ffffff;
     font-weight: bold;
     margin-bottom: 1px;
 }
@@ -1226,29 +1227,28 @@ a:focus {
 .project-image {
     display: flex;
     flex-direction: row;
-    justify-content:space-around;
+    gap: 10px;
     align-items: center;
-    margin: 40px 20px 5px 20px;
+    margin: 10px;
     border-radius: 60px;
 }
 
 .project-image img {
     width: 100%; 
-    max-width: 350px; 
-    margin: 0 20px 20px 20px;
-    
+    max-width: 290px;
 }
 
 .project-title {
     display: flex;
     justify-content:flex-start;
     align-items: center;
-    gap: 270px;
-    margin-left: 60px;
+    gap: 200px;
+    margin-left: 10px;
 }
 
 .external-link {
-    color: #666666;
+    color: #ffffff;
+    font-size: 15px;
 }
 .external-link:hover {
     color: #0070f3;
@@ -1261,25 +1261,31 @@ a:focus {
 }
 
 .tech-tag {
-    background-color:  #666666;
-    color: rgba(0, 0, 0, 0.575);
+    background-color:  #0078ffe6;
+    color: #ffffff;
     padding: 4px 8px;
     border-radius: 9px;
     font-size: 0.875rem;
     font-weight: 600; 
-    margin-bottom: 10px;
+    margin-bottom: 2px;
 }
 
 .project-description ul {
+    color: #ffffff;
     list-style: none;
     padding: 0;
     margin: 1.5rem 0;
 }
 
+.project-description p {
+    color: #ffffff;
+    margin: 0px;
+}
+
 .project-description li {
     position: relative;
-    padding-left: 1.5rem;
-    margin-bottom: 0.5rem;
+    padding-left: 1rem;
+    margin-bottom: 0rem;
 }
 
 .project-description li::before {
